Major upgrade * to Spring Boot 3.1 * upgrade all dependencies and plugins to latest available * fix test configuration properties * fix references to test-resources * json schema validator changed groupId * auth0 provider changed to okta-spring-boot-starter   * security configuration implementation changes - remain untested, just enough to compile * still have a ways to go, but we're making progres